AeroConsole/2024.2.0.0/Changelog.md
# AERO Console - 2024.2.0.0

## Features

- [BMS] Added advanced battery info for X7s
- [BMS] Added button to turn off X7s remotely
- [Verge Remote V2] Added new system for remotely monitoring and operating the console
  - Verge Remote can be accessed from a mobile phone or web browser via the Aero Portal
- [Logging] Added new, automated data capture that records all important information about show performances
  - Data can be uploaded to the Aero Portal and reviewed post-mortem
  - Issues are automatically reported
- [UI] System clock is now displayed in the bottom-right
- [Network] Added ability to force drones to reconnect to the server
- [Network] Added ability to force one or multiple drones to be booted from the server
- [Shows] Cloud-rendered shows can now be accessed, downloaded, and loaded from inside of the console
- [VPKG] Verge software packages can now be downloaded and installed from inside of the console
- [Testing] Added UI for triggering motor tests on one or more drones

## Improvements

- [Network] When a single drone is selected, updates are performed on that device at a minimum of 2 Hz
- [UI] Total rework of drone inspector
- [UI] Layout improvements
- [UI] Anchor adjustment UI now has square scaling to improve visibility
- [UI] Anchor adjustment UI now places adjustment UI next to adjustment graph
- [UI] Filter now shows device types rather than object resources
- [UI] Added inspector for when multiple drones are selected
- [UI] Added option to quickly switch to manual launch trigger
- [Scene View] Drones and slotting info are now drawn in showtime mode

## Bug Fixes

